objects/ProductConsumed__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>ProductConsumed</externalName>
    <fields>
        <fullName>AccountingIndicator_c__c</fullName>
        <externalDeveloperName>AccountingIndicator__c</externalDeveloperName>
        <label>Accounting Indicator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25%</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30%</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>YC</fullName>
                    <label>TO BE CHARGED</label>
                </value>
                <value>
                    <fullName>YF</fullName>
                    <label>INCLUDED</label>
                </value>
                <value>
                    <fullName>YN</fullName>
                    <label>NOT DISPLAYED</label>
                </value>
                <value>
                    <fullName>YX</fullName>
                    <label>EXTRA HOURS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchNumber_c__c</fullName>
        <externalDeveloperName>BatchNumber__c</externalDeveloperName>
        <label>Batch Number</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Error_Message_c__c</fullName>
        <externalDeveloperName>Interface_Error_Message__c</externalDeveloperName>
        <label>Interface Error Message</label>
        <length>130000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Status_c__c</fullName>
        <externalDeveloperName>Interface_Status__c</externalDeveloperName>
        <label>Interface Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Material_Doc_Year_c__c</fullName>
        <externalDeveloperName>Material_Doc_Year__c</externalDeveloperName>
        <label>Material Doc Year</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Document_c__c</fullName>
        <externalDeveloperName>Material_Document__c</externalDeveloperName>
        <label>Material Document</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_c__c</fullName>
        <externalDeveloperName>Plant__c</externalDeveloperName>
        <label>Plant</label>
        <length>4</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookEntryId__c</fullName>
        <externalDeveloperName>PricebookEntryId</externalDeveloperName>
        <label>Price Book Entry ID</label>
        <length>18</length>
        <referenceTo>PricebookEntry__x</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <externalDeveloperName>Product2Id</externalDeveloperName>
        <label>Product ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode_c__c</fullName>
        <externalDeveloperName>ProductCode__c</externalDeveloperName>
        <label>Product Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductConsumedNumber__c</fullName>
        <externalDeveloperName>ProductConsumedNumber</externalDeveloperName>
        <label>Product Consumed Number</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItemId__c</fullName>
        <externalDeveloperName>ProductItemId</externalDeveloperName>
        <label>Product Item ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>Product Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityConsumed__c</fullName>
        <externalDeveloperName>QuantityConsumed</externalDeveloperName>
        <label>Quantity Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityUnitOfMeasure__c</fullName>
        <externalDeveloperName>QuantityUnitOfMeasure</externalDeveloperName>
        <label>Quantity Unit Of Measure</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ST</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>KIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_AccountNumber_c__c</fullName>
        <externalDeveloperName>SAP_AccountNumber__c</externalDeveloperName>
        <label>SAP Account Number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code_c__c</fullName>
        <externalDeveloperName>SAP_Product_Code__c</externalDeveloperName>
        <label>SAP Product Code</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber_c__c</fullName>
        <externalDeveloperName>SerialNumber__c</externalDeveloperName>
        <label>Serial Number</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialStockIndicator_c__c</fullName>
        <externalDeveloperName>SpecialStockIndicator__c</externalDeveloperName>
        <label>Special Stock Indicator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StorageLocation_c__c</fullName>
        <externalDeveloperName>StorageLocation__c</externalDeveloperName>
        <label>Storage Location</label>
        <length>4</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>Unit Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WorkOrderId__c</fullName>
        <externalDeveloperName>WorkOrderId</externalDeveloperName>
        <label>Work Order ID</label>
        <length>18</length>
        <referenceTo>WorkOrder__x</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>WorkOrderLineItemId__c</fullName>
        <externalDeveloperName>WorkOrderLineItemId</externalDeveloperName>
        <label>Line Item ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderServiceReport_c__c</fullName>
        <externalDeveloperName>WorkOrderServiceReport__c</externalDeveloperName>
        <label>Work Order Service Report</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <label>Product Consumed</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Products Consumed</pluralLabel>
</CustomObject>